<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.shoestoreinventory.LoginFragment"
        android:label="">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.example.shoestoreinventory.WelcomeFragment"
        android:label="@string/welcome" >
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.example.shoestoreinventory.InstructionsFragment"
        android:label="@string/instructionHeader" >
        <action
            android:id="@+id/action_instructionsFragment_to_shoeListingFragment"
            app:destination="@id/shoeListingFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/shoeListingFragment"
        android:name="com.example.shoestoreinventory.ShoeListingFragment"
        android:label="@string/shoeList" >
        <action
            android:id="@+id/action_shoeListingFragment_to_shoeDetailsFragment"
            app:destination="@id/shoeDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailsFragment"
        android:name="com.example.shoestoreinventory.ShoeDetailsFragment"
        android:label="@string/addShoe" >
        <action
            android:id="@+id/action_shoeDetailsFragment_to_shoeListingFragment"
            app:destination="@id/shoeListingFragment"
            app:popUpTo="@id/shoeListingFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>