<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="shoeDetails"
            type="com.example.shoestoreinventory.ShoeDetails" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/add_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/twenty"
                android:text="@string/save"
                android:theme="@style/buttonStyle"
                app:backgroundTint="@color/blue"
                app:cornerRadius="@dimen/fifteen"
                app:layout_constraintBottom_toTopOf="@+id/exit_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextShoeDescription" />

            <Button
                android:id="@+id/exit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fortyfive"
                android:text="@string/cancel"
                android:theme="@style/buttonStyle"
                app:backgroundTint="@color/blue"
                app:cornerRadius="@dimen/fifteen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_back_button" />

            <EditText
                android:id="@+id/editTextShoeDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/twenty"
                android:background="@android:drawable/editbox_background_normal"
                android:ems="@integer/ten"
                android:padding="@dimen/fifteen"
                android:text="@={shoeDetails.shoeDescription}"
                app:layout_constraintBottom_toTopOf="@+id/add_back_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <EditText
                android:id="@+id/editTextShoeSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/twenty"
                android:background="@android:drawable/editbox_background_normal"
                android:ems="@integer/ten"
                android:inputType="number"
                android:padding="@dimen/fifteen"
                android:text="@={shoeDetails.shoeSize}"
                app:layout_constraintBottom_toTopOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <EditText
                android:id="@+id/editTextShoeBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/twenty"
                android:background="@android:drawable/editbox_background_normal"
                android:ems="@integer/ten"
                android:padding="@dimen/fifteen"
                android:text="@={shoeDetails.shoeBrand}"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <EditText
                android:id="@+id/editTextShoeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/twenty"
                android:background="@android:drawable/editbox_background_normal"
                android:ems="@integer/ten"
                android:padding="@dimen/fifteen"
                android:text="@={shoeDetails.shoeName}"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textViewShoeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/twenty"
                android:text="@string/fillDetails"
                android:theme="@style/textStyle"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/twenty"
                android:text="@string/shoeName"
                android:theme="@style/labelStyle"
                app:layout_constraintBottom_toTopOf="@+id/editTextShoeName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewShoeName" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/twenty"
                android:text="@string/shoeBrand"
                android:theme="@style/labelStyle"
                app:layout_constraintBottom_toTopOf="@+id/editTextShoeBrand"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextShoeName" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/twenty"
                android:text="@string/shoeSize"
                android:theme="@style/labelStyle"
                app:layout_constraintBottom_toTopOf="@+id/editTextShoeSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextShoeBrand" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/twenty"
                android:text="@string/shoeDescription"
                android:theme="@style/labelStyle"
                app:layout_constraintBottom_toTopOf="@+id/editTextShoeDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextShoeSize" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>