<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="userDetails"
            type="com.example.shoestoreinventory.UserDetails" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/thirty"
                android:text="@string/login"
                android:theme="@style/buttonStyle"
                app:backgroundTint="@color/blue"
                app:cornerRadius="@dimen/fifteen"
                app:layout_constraintBottom_toTopOf="@+id/existingAccountLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

            <Button
                android:id="@+id/existingAccountLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/thirty"
                android:text="@string/loginExisitingAccount"
                android:theme="@style/buttonStyle"
                app:backgroundTint="@color/blue"
                app:cornerRadius="@dimen/twenty"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginButton" />

            <TextView
                android:id="@+id/header_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fortyfive"
                android:background="@color/blue"
                android:gravity="center_horizontal"
                android:text="@string/app_header"
                android:theme="@style/header"
                app:cornerRadius="@dimen/twenty"
                app:layout_constraintBottom_toTopOf="@+id/textView7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/twenty"
                android:autofillHints="@string/email"
                android:background="@android:drawable/editbox_background_normal"
                android:ems="@integer/ten"
                android:inputType="textEmailAddress"
                android:padding="@dimen/fifteen"
                android:text="@={userDetails.emailId}"
                app:layout_constraintBottom_toTopOf="@+id/textView8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fortyfive"
                android:autofillHints="@string/password"
                android:background="@android:drawable/editbox_background_normal"
                android:ems="@integer/ten"
                android:inputType="textPassword"
                android:padding="@dimen/fifteen"
                android:text="@={userDetails.password}"
                app:layout_constraintBottom_toTopOf="@+id/loginButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/twenty"
                android:text="@string/email"
                android:theme="@style/labelStyle"
                app:layout_constraintBottom_toTopOf="@+id/editTextEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_title" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/twenty"
                android:text="@string/password"
                android:theme="@style/labelStyle"
                app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>